[gd_scene load_steps=25 format=2]

[ext_resource path="res://sprites/act3settings/cracked1.png" type="Texture" id=1]
[ext_resource path="res://sprites/Act1settings/sceneone/dark filter.png" type="Texture" id=2]
[ext_resource path="res://sprites/act3settings/tub1.png" type="Texture" id=3]
[ext_resource path="res://sprites/act3settings/bloodbath.png" type="Texture" id=4]
[ext_resource path="res://sprites/UI/the-unseen/the unseen.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://sprites/UI/dialoguebox copy.png" type="Texture" id=6]
[ext_resource path="res://player/player.tscn" type="PackedScene" id=7]
[ext_resource path="res://act3/scene2/tub.gd" type="Script" id=8]
[ext_resource path="res://act3/scene2/bathroomexit.gd" type="Script" id=9]
[ext_resource path="res://sounds/458587__inspectorj__ui-mechanical-text-scroll-03-fx-01-loop-[AudioTrimmer.com].wav" type="AudioStream" id=10]
[ext_resource path="res://act3/scene2/tub1.gd" type="Script" id=11]
[ext_resource path="res://sprites/UI/continuesprite copy.png" type="Texture" id=12]
[ext_resource path="res://sounds/Closing-Squeaky-Door-1-www.fesliyanstudios.com.wav" type="AudioStream" id=13]
[ext_resource path="res://sounds/ftus_building_abandoned_derelict_water_drips_distant_traffic_625.mp3" type="AudioStream" id=14]

[sub_resource type="DynamicFont" id=1]
size = 100
font_data = ExtResource( 5 )

[sub_resource type="Animation" id=2]
resource_name = "New Anim"
length = 2.0
loop = true
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 972.401, -0.25, 0, 0.25, 0, 972.401, -0.25, 0, 0.25, 0, 972.401, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1, 2 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 449.021, -0.25, 0, 0.25, 0, 520, -0.25, 0, 0.25, 0, 449.021, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1, 2 )
}

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 716.07, 448.444 )

[sub_resource type="DynamicFont" id=5]
size = 100
font_data = ExtResource( 5 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 158.614, 817.351 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 1920.49, 97.445 )

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 211.315, 333.764 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 462.93, 832.894 )

[node name="Node2D" type="Node2D"]

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 1909.09, 1070.48 )
scale = Vector2( 1.00403, 1.02505 )
z_index = -1
texture = ExtResource( 4 )

[node name="dialoguebox" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="dialoguebox"]
margin_left = 126.0
margin_top = 469.0
margin_right = 1906.0
margin_bottom = 969.0
texture = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Type" type="AudioStreamPlayer" parent="dialoguebox"]
stream = ExtResource( 10 )

[node name="RichTextLabel" type="RichTextLabel" parent="dialoguebox"]
margin_left = 226.0
margin_top = 549.0
margin_right = 1773.0
margin_bottom = 874.0
custom_fonts/normal_font = SubResource( 1 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="dialoguebox"]

[node name="continuesprite" type="Sprite" parent="dialoguebox"]
position = Vector2( 972.401, 520 )
scale = Vector2( 1.24405, 1.99528 )
texture = ExtResource( 12 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="dialoguebox/continuesprite"]
autoplay = "New Anim"
"anims/New Anim" = SubResource( 2 )

[node name="tub" type="Area2D" parent="."]
script = ExtResource( 11 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="tub"]
position = Vector2( 1898.73, 1156.96 )
frames = SubResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="tub"]
position = Vector2( 955.78, 1680.49 )
shape = SubResource( 4 )

[node name="Label" type="Label" parent="tub"]
margin_left = 631.64
margin_top = 1059.52
margin_right = 945.64
margin_bottom = 1159.52
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "look inside"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 47.3621, 1269.31 )
shape = SubResource( 6 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 3741.62, 1278.78 )
shape = SubResource( 6 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 1875.54, 2018.21 )
shape = SubResource( 7 )

[node name="player" parent="." instance=ExtResource( 7 )]
position = Vector2( 1054.18, 1658.57 )

[node name="mirror" type="Area2D" parent="."]
z_index = -1

[node name="AnimatedSprite" type="AnimatedSprite" parent="mirror"]
position = Vector2( 1908.68, 1079.36 )
frames = SubResource( 8 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="mirror"]
position = Vector2( 2508.89, 1584.83 )
shape = SubResource( 9 )

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( 1930.04, 983.001 )
scale = Vector2( 1.06593, 1 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite3" type="Sprite" parent="."]
position = Vector2( 1930.04, 983.001 )
scale = Vector2( 1.06593, 1 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Area2D" type="Area2D" parent="."]
script = ExtResource( 9 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 4022.48, 1494.17 )
shape = SubResource( 10 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Area2D"]
stream = ExtResource( 13 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 14 )
volume_db = -5.0
autoplay = true

[connection signal="tree_exited" from="dialoguebox" to="dialoguebox" method="_on_dialoguebox_tree_exited"]
[connection signal="tween_completed" from="dialoguebox/Tween" to="dialoguebox" method="_on_Tween_tween_completed"]
[connection signal="body_entered" from="tub" to="dialoguebox" method="_on_tub_body_entered"]
[connection signal="body_entered" from="tub" to="tub" method="_on_tub_body_entered"]
[connection signal="body_exited" from="tub" to="dialoguebox" method="_on_tub_body_exited"]
[connection signal="body_exited" from="tub" to="tub" method="_on_tub_body_exited"]
[connection signal="body_entered" from="Area2D" to="Area2D" method="_on_Area2D_body_entered"]
